# Saturday-University-Project

./: README.md  helloworldcallum.rtf  main.cpp  test ibrah.rtf
Callum Course Selection code/: Course Selection main body code.cpp
Competition/: Sat-Uni-Main-Body.cpp  classroom.cpp  course.h  term_operations.cpp
Competition - Not complete/: CMakeLists.txt  course.cpp  reg_system.h  student.cpp  term_operations.h
Course file read test/: course-input-file-read.cpp  courses-file-test.txt
Example Input Files/: Term 1 Time Table.txt  Term 2 Time Table.txt  classrooms.txt  courses.txt  input_course.txt  system-parameters-in.txt
Final Project solution/: CMakeLists.txt  Sat-Uni-Main-Body.cpp  classroom.cpp  classroom.h  course.cpp  course.h  reg_system.cpp  student.cpp  student.h  term_operations.cpp  term_operations.h
Ibrahim code/: Ibrahims.cpp  saturday university scheduling and building manager.txt
Main body/: CMakeLists.txt  Sat-Uni-Main-Body.cpp  classroom.cpp  classroom.h  course.cpp  course.h  reg_system.cpp  reg_system.h  student.cpp  student.h  system-parameters-in.txt  systemINI.cpp  systemINI.h
Manuel System prototype code/: CMakeLists.txt  Sat-Uni-Main-Body.cpp  classroom.cpp  classroom.h  course.cpp  course.h  reg_system.cpp  reg_system.h  student.cpp  student.h  term_operations.cpp  term_operations.h
Notes on input files and system procedure/: Notes on course selection  Notes on course selection.txt  (+5 more)
competition_clion/: CMakeLists.txt  Sat-Uni-Main-Body.cpp  course.cpp  course.h  reg_system.cpp  student.h  term_operations.cpp  term_operations.h
(+44 files in other folders)
